--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign In & Mini Dashboard</title>
   </head>
-  <body id="root" class="text-center">
-    <!-- <div id="root"></div> -->
+  <body>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
